# signet-backend

./: .gitignore  README.md  pyproject.toml
signet/: crypt.py  db.py  enc.py  main.py  models.py  pdf.py  qr.py  render.py  repo.py  serialization.py  settings.py  signet.py  template_gen.py
