[project]
name = "zecathon-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi-standalone-docs>=0.2.0",
    "fastapi[standard]>=0.121.1",
    "openai>=2.7.2",
    "pdf2image>=1.17.0",
    "pdf417gen>=0.8.1",
    "pillow>=12.0.0",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.4",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "clipboard>=0.0.4",
    "isort>=7.0.0",
    "ruff>=0.14.4",
]
